FROG CMS - Change Log

======
Sigla:
+ enhancement, addition
- bug fix
. other development
======

0.9.5 - released 2009-02-??

+ Added advisory about removing changelog.txt to install screen.
+ Added output buffering around main() - issue 114
+ Added option to choose administrator name in install screen. - issue 149
+ Added function that generates administrator password during install routine. - issue 149
+ Added check to make sure config.php isn't writable.
+ Added inheritence to hasContent() function. - issue 142
+ Added icon to directories in file_manager plugin - issue 140
+ Added Plugin::isEnabled($plugin_id) to Plugin class for plugin devs. (allows for basic plugin dependancies.)
+ Added getSetting(), setSetting(), getAllSettings() and setAllSettings() to Plugin class for plugin devs - issue 128
+ Added comments plugin option to display to-be-moderated comments on plugin tab (default true)
+ Added MySQL port to install screen. Thanks gilles.doge - issue 107
+ Added new events - issue 94
+ Added site identifiers to login screens (both login.php and forgot.php) based on Admin screen title setting.
+ Added front-end login feature similar to layout selector. (login required, not required, inherit)
+ Added drag-to-copy feature for better multi-language support. Thanks tuupola.
+ Added a new core plugin called skeleton to help out new plugin developers.
+ Added translation template generator to help out translators with translating Frog core and plugins.
+ Added Norwegian and Swedish core translations.
+ Added updated Chinese translation.
+ Removed split between frontend and backend.
+ Added an ID to the "view this page" link so it can be styled.
+ Added Danish translation for admin and file manager. Thanks Kenan.
+ Added Croatian translation for admin and file manager. Thanks jackie.

- Fixed small bug with wrong link to rss feed in Normal theme - issue 166
- Fixed bug with default tab listing showing controller which had set show_tab to false.